# UPSMonitor

./: .gitignore  README.md  UPSMonitor.doap  meson.build  org.ponderorg.UPSMonitor.json
data/: meson.build  org.pnoderorg.UPSMonitor.gresource.xml  org.ponderorg.UPSMonitor.appdata.xml.in  org.ponderorg.UPSMonitor.desktop.in  org.ponderorg.UPSMonitor.gschema.xml
data/icons/: meson.build
data/ui/: add_new_server_box.ui  help-overlay.ui  home_page.ui  host_action_row.ui  host_informations_page.ui  host_preferences_page.ui  host_settings_page.ui  monitor_preferences_window.ui  saved_host_action_row.ui  temporary_host_action_row.ui  ups_action_row.ui  ups_info_page.ui  ups_notifications_page.ui  ups_preferences_page.ui  ups_preferences_page_new.ui  ups_settings_page.ui  window.ui
po/: POTFILES  en.po  it.po  meson.build
src/: add_new_server_box.py  add_new_server_box.ui  data_model.py  host_action_row.py  host_preferences_page.py  host_services.py  main.py  meson.build  monitor_preferences_window.py  monitor_preferences_window.ui  service_model.py  ups_action_row.py  ups_action_row.ui  ups_monitor_client.py  ups_monitor_daemon.py  ups_monitor_service.py  ups_preferences_page.py  upsmonitor.gresource.xml  upsmonitor.in  window.py  window.ui
src/gui/: add_new_server_box.py  home_page.py  host_pages.py  host_preferences_page.py  monitor_preferences_window.py  ups_pages.py  ups_preferences_page.py  ups_preferences_page_new.py  window.py
src/model/: data_model.py  exception_model.py
src/service/: data_service.py  nut_controller.py  ups_monitor_daemon.py
